1. Fix issue on pop up image, error when press keyboard left arrow on first picture or right arrow on last picture 2. Fix issue on pop up image, extra image is generated due to Id clashed between thumbnail and big image 3. Navigation bar, to add font family Verdana to display in Firefox browser 4. Add [View More] button on Main page to jump to Gallery page 5. Code refactoring and variable naming adjustment

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 #navBar {
     height: 10vh;
     font-size: 12px;
-    font-family: Gill Sans;
+    font-family: Gill Sans, Verdana;
 }
 
 #navBar > a {
@@ -42,6 +42,19 @@
 
 .imgInText:hover {
     transform: rotate(45deg);
+}
+
+#moreButton {
+    margin: 10px;
+    padding: 10px 20px;
+    border-width: 2px;
+    border-radius: 10px;
+    border-color: lightgrey;
+    font-weight: bold;
+    cursor: pointer;
+}
+#moreButton:hover {
+    background-color: darkgrey;
 }
 
 #galleryArea {
